# ng-packagr

./: .appveyor.yml  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json  tsconfig.packagr.json
.circleci/: config.yml
integration/samples/custom/src/foo/: foo.component.ts
integration/samples/embed-assets/src/: angular.component.ts
integration/samples/jsx/: ng-package.json
integration/samples/rollup/: README.md  package.json  public_api.ts
integration/samples/rollup/specs/: bundle.ts
integration/watch/: BUILD.bazel  basic.spec.ts  intra-dependent.spec.ts  resources.spec.ts  test-harness.ts
integration/watch/basic/: package.json
integration/watch/intra-dependent/: package.json
integration/watch/resources/: package.json
src/: BUILD.bazel  ng-package.schema.json  tsconfig.packagr.json
src/lib/: entry-point-transforms.ts
src/lib/brocc/: depth.spec.ts
src/lib/domain/: ng-package-format.ts
src/lib/file/: file-cache.spec.ts
src/lib/file-system/: file-cache.ts
src/lib/flatten/: external-module-id-strategy.spec.ts  external-module-id-strategy.ts  flatten.ts  rollup.ts  uglify.ts  umd-module-id-strategy.spec.ts
src/lib/ng-package/: nodes.ts  package.transform.ts
src/lib/ng-package-format/: package.ts
src/lib/ng-v5/: discover-packages.ts  entry-point.di.ts  entry-point.transform.ts  nodes.ts  package.transform.ts  packagr.spec.ts  packagr.ts
src/lib/ng-v5/entry-point/: write-bundles.transform.ts  write-package.transform.ts
src/lib/ng-v5/entry-point/resources/: stylesheet-processor.ts  stylesheet.transform.ts
src/lib/ng-v5/entry-point/ts/: compile-ngc.transform.ts
src/lib/ng-v5/init/: analyse-sources.transform.ts
src/lib/ngc/: compile-source-files.ts  transform-source-files.ts
src/lib/steps/: rollup.ts
src/lib/ts/: cache-compiler-host.ts  redirect-write-file-compiler-host.ts  tsconfig.ts  watch-compiler-host.ts
src/lib/util/: log.ts
src/lib/watch/: watch-compiler-host.ts
